--- a/src/styles.css
+++ b/src/styles.css
@@ -19,26 +19,45 @@ border-bottom: 3px solid lightblue;
     flex-flow: row wrap;
     align-content: space-between;
 }
-.girls{
-    background-color: pink;
-    border-radius: 5%;
-    width: fit-content;
-    height: fit-content;
-    text-align: center;
-    padding: 5px;
-    margin: 5px;
+.girls,
+.favorite-names.girls {
+  background-color: pink;
+  border-radius: 5%;
+  display: inline-block;
+  color: black;
+  padding: 5px;
+  margin: 5px;
 }
-.boys{
-    background-color: lightblue;
-    border-radius: 5%;
-    width: fit-content;
-    height: fit-content;
-    text-align: center;
-    padding: 6px;
-    margin: 5px;
+
+.boys,
+.favorite-names.boys {
+  background-color: lightblue;
+  border-radius: 5%;
+  display: inline-block;
+  color: black;
+  padding: 5px;
+  margin: 5px;
 }
+
 
 hr{
     background-color: lightslategray;
     opacity: 0.3;
+}
+
+h2{
+    color: lightslategray;
+    opacity: 0.7;
+    font-size: x-large;
+}
+
+
+input{
+    display: flex;
+    margin-right: auto;
+    margin-left: auto;
+    width: 300px;
+    height: 40px;
+    border-radius: 2%;
+    border: 2px solid lightblue;
 }
