--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,22 @@
-html{
-    background-color: whitesmoke;
-    margin: 10px;
-    width: auto;
-    height: auto;
+html {
+  background-color: whitesmoke;
+  margin: 10px;
+  width: auto;
+  height: auto;
 }
-body{
-padding: 30px;
-border-radius: 1%;
-border-top: 3px solid pink;
-border-left: 3px solid pink;
-border-right: 3px solid lightblue;
-border-bottom: 3px solid lightblue;
-
+body {
+  padding: 30px;
+  border-radius: 1%;
+  border-top: 3px solid pink;
+  border-left: 3px solid pink;
+  border-right: 3px solid lightblue;
+  border-bottom: 3px solid lightblue;
 }
 
-.all-names{
-    display: flex;
-    flex-flow: row wrap;
-    align-content: space-between;
+.all-names {
+  display: flex;
+  flex-flow: row wrap;
+  align-content: space-between;
 }
 .girls,
 .favorite-names.girls {
@@ -39,25 +38,27 @@ border-bottom: 3px solid lightblue;
   margin: 5px;
 }
 
-
-hr{
-    background-color: lightslategray;
-    opacity: 0.3;
+hr {
+  background-color: lightslategray;
+  opacity: 0.3;
 }
 
-h2{
-    color: lightslategray;
-    opacity: 0.7;
-    font-size: x-large;
+h2 {
+  color: lightslategray;
+  opacity: 0.7;
+  font-size: x-large;
 }
 
+input {
+  display: flex;
+  margin-right: auto;
+  margin-left: auto;
+  width: 300px;
+  height: 40px;
+  border-radius: 2%;
+  border: 2px solid lightblue;
+}
 
-input{
-    display: flex;
-    margin-right: auto;
-    margin-left: auto;
-    width: 300px;
-    height: 40px;
-    border-radius: 2%;
-    border: 2px solid lightblue;
+.inline-buttons {
+  display: inline;
 }
